@@ -3,13 +3,14 @@
 ---------
 - Added `extra_callback_info1_byte_2` variable for quick access to the second byte of `extra_callback_info1`.
 - Print timings for grf compilation.
-- Rename `layout` argument of `CallbackManager.make_switch` to `graphics`.
+- Renamed `layout` argument of `CallbackManager.make_switch` to `graphics`.
 - Added optional `purchase_graphics` argument for `CallbackManager.make_switch` to specify different chain for vehicle purchase graphics.
 - Change vehicle `retire_early` Action0 property type to a signed byte.
 - Added `RunningCost` class of constants.
 - Added `VEHICLE_FEATURES` constant.
 - Allowed sprite generators to return other generators.
 - Added `SpriteTable` and `VehicleSpriteTable` classes.
+- Added VarAction 2 variables for railtypes.
 - grftopy: Added outlines to duplicate sprites: red - full dup, yellow - data dup but different offsets
 
 ---------
